# data_recording_system

./: .gitignore  README.md  autoware.repos  build.sh  setup-dev-env.sh  setup-drs.sh
ansible/: setup-dev-env.yaml  setup-drs.yaml
ansible/roles/auto_storage_mount/defaults/: main.yaml
ansible/roles/auto_storage_mount/tasks/: main.yaml
ansible/roles/can_network_setting/defaults/: main.yaml
ansible/roles/can_network_setting/files/: drs_can_network_setting.service
ansible/roles/can_network_setting/tasks/: main.yaml
ansible/roles/can_network_setting/templates/: 50-can.rules.jinja2  can_network_setting.sh.jinja2
ansible/roles/cgroups/tasks/: main.yaml
ansible/roles/cgroups/templates/: sensor_trigger.conf.jinja2
ansible/roles/cyclonedds/templates/: cyclonedds.xml.jinja2
ansible/roles/disable_systemd_timesyncd/tasks/: main.yaml
ansible/roles/drs_env_setting/defaults/: main.yaml
ansible/roles/drs_env_setting/tasks/: main.yaml
ansible/roles/drs_launch_service/defaults/: main.yaml
settings/ECU0/: 99-edge-auto-jetson.yaml
settings/ECU0/service/: ptpd_master@eqos0.service  ptpd_master@eth0.service  ptpd_master@mgbe0.service  ptpd_slave@eth1.service
settings/ECU1/: 00-company-network.yaml
settings/ECU1/service/: ptpd_master@eqos0.service  ptpd_master@mgbe0.service  ptpd_slave@eth0.service
src/c2_readout_delay_setter/: README.md  package.xml  setup.cfg  setup.py
src/c2_readout_delay_setter/c2_readout_delay_setter/: c2_readout_delay_setter.py
src/c2_readout_delay_setter/scripts/: set_readout_delay.sh
src/drs_launch/: CMakeLists.txt  package.xml
src/drs_launch/launch/: drs.launch.xml  drs_ecu0.launch.xml  drs_ecu1.launch.xml  drs_offline.launch.xml
src/drs_launch/launch/component/: accelerated_image_processor.launch.xml  can_interface.launch.xml  drs_aeva.launch.xml  drs_camera.launch.xml  drs_seyond.launch.xml  imu.launch.xml  ins.launch.xml  lidar_camera_tf_publisher.launch.py  tf_publisher.launch.py  v4l2_camera.launch.xml
src/individual_params/: CMakeLists.txt  package.xml
src/periodic_transform_publisher/: CMakeLists.txt  package.xml
src/periodic_transform_publisher/src/: periodic_transform_publisher.cpp
src/simple_frontend/: package.xml  setup.cfg  setup.py
src/simple_frontend/launch/: simple_frontend.launch.xml
src/simple_frontend/simple_frontend/: led_indicator.py  simple_frontend.py  software_switch_monitor.py  switch_monitor.py  switch_monitor_base.py
src/simple_point_concatenate/: CMakeLists.txt  README.md  package.xml
src/simple_point_concatenate/include/pointcloud_concatenate/: offset_concatenate_pointclouds.hpp
src/simple_point_concatenate/launch/: pointcloud_concatenate.launch.py
src/simple_point_concatenate/src/pointcloud_concatenate/: offset_concatenate_pointclouds.cpp
(+76 files in other folders)
