<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drs_launch</name>
  <version>0.0.0</version>
  <description>Launchers for Data Recording System</description>
  <maintainer email="manato.hirabayashi@tier4.jp">manatohirabayashi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>can_interface</exec_depend>
  <exec_depend>individual_params</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nebula_ros</exec_depend>
  <exec_depend>oxts</exec_depend>
  <exec_depend>pacmod3</exec_depend>
  <exec_depend>sensor_trigger</exec_depend>
  <exec_depend>tamagawa_imu_driver</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>accelerated_image_processor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
